# Soluna

./: .gitignore  BERT_OPTIMIZATION_GUIDE.md  BERT_WORKFLOW.md  Caddyfile  HYBRID_RECOMMENDATION_GUIDE.md  README.md  RECAP_FEATURE.md  SYNERGY_FEATURES.md  TESTING_SYNERGY.md  VOICE_ACTOR_OPTIMIZATION.md  docker-compose.yml  structure.md  test_recap.py  test_voice_actors.py
Lunaris/: .dockerignore  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_QUICKSTART.md  Dockerfile  VOICE_ACTOR_CACHE.md  anilist_client.py  bert_config.py  bert_recommender.py  bert_recommender_optimized.py  check_bert_status.py  check_cache_status.py  check_training_status.py  diagnose_cache.py  drop_analysis_engine.py  hybrid_drop_prediction_engine.py  hybrid_recommendation_engine.py  ingest_data.py  load_users_from_file.py  main.py  manage_cache.py  models.py  prepare_anime.bat  progress_tracker.py  pyproject.toml  quick_test.py  quick_train.py  recommendation_engine.py  requirements.txt  soluna.db  test_bert_integration.py  test_cache_speed.py  test_sse_connection.py  test_xgboost_training.py  train_bert_model.py  verify_bert_integration.py
Lunaris/bert_model/: README_BERT.md  anilist_client.py  bert_recommender_optimized.py  clean_and_reload.bat  clean_and_reload.py  database.py  datas_user.txt  load_users.bat  load_users_from_file.py  prepare_bert_dataset.py  test_drop_prediction.py  train.bat  train_bert_model.py
Lunaris/lunaris.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lunaris/test/: test_db.py  test_single_anime_voice_actors.py  test_user_thet.py  test_voice_actor_cache.py
(+75 files in other folders)
