[project]
name = "lunaris"
version = "0.1.0"
description = "Backend for Ani-Risk Project (AniList Analytics)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "sqlmodel>=0.0.22",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
